[package]
name = "monitor-api"
version = "0.1.0"
edition = "2021"
default-run = "monitor-api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true
lto = true
opt-level = 'z'
codegen-units = 1
panic = "abort"

[dependencies]
axum = { version = "0.6.7", features = ["http2"] }
bb8 = "0.8.0"
bb8-tiberius = "0.15.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tiberius = { version = "0.12.1", default-features = false, features = ["chrono"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.3.5", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.3.0", features = ["serde"] }
